<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/clr4"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/label1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:background="@color/clr2"
        android:textSize="25sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:text="@string/label2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/clr4"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/label3" />

    <Button
        android:id="@+id/btnDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/clr3"
        android:textColor="@color/clr1"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/label4"
        />

    <TextView
        android:id="@+id/tvSelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/clr4"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="?" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/clr3"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/label5" />

    <TextView
        android:id="@+id/tvSelectedDateInYears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/clr4"
        android:textSize="35sp"
        android:textStyle="bold"
        android:text="?" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/clr3"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/label6" />

    <TextView
        android:id="@+id/tvSelectedDateInDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/clr4"
        android:textSize="35sp"
        android:textStyle="bold"
        android:text="?" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/clr3"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/label7" />

    <TextView
        android:id="@+id/tvSelectedDateInMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/clr4"
        android:textSize="35sp"
        android:textStyle="bold"
        android:text="?" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/clr3"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/label8" />


</LinearLayout>